Migrated to Vite

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;1,200&family=Quicksand:wght@300;400&display=swap" rel="stylesheet"/>
     <meta name="description" content="Portfolio of Nazareno Gutierrez" />
     <title>Nazareno Gutierrez</title>
-  </head>
+  <script type="module" src="src/index"></script></head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
